# XXQG

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish_xxqg.yml
XXQG/: __init__.py  config.py
XXQG/models/: __init__.py  log.py  user.py
XXQG/resource/: LICENSE  manifest.json
XXQG/schemas/: common.py
XXQG/utils/: __init__.py  activity.py  handle.py  login.py  path.py  rule.py
